Basic docker configuration so I can test stuff

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,6 +5,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    command: /bin/sh -c "yarn && yarn dev"
     tty: true
     expose:
       - 3000
@@ -19,8 +20,8 @@ services:
       - traefik.http.routers.lp.tls.certresolver=lets-encrypt
       - traefik.port=8084
     volumes:
-      - '.:/app:cached'
-      - node_modules:/app/node_modules:cached
+      - .:/app
+      - ./node_modules:/app/node_modules:cached
 
 networks:
   web:
