--- a/package.json
+++ b/package.json
@@ -12,13 +12,12 @@
     "@nfteyez/sol-rayz": "^0.8.0",
     "@solana/web3.js": "^1.31.0",
     "@types/axios": "^0.14.0",
-    "atob": "^2.1.2",
     "axios": "^0.24.0",
-    "bs58": "^4.0.1",
     "core-js": "^3.15.1",
+    "discord.js": "^13.3.1",
+    "dotenv": "^10.0.0",
     "nuxt": "^2.15.7",
-    "tweetnacl": "^1.0.3",
-    "tweetnacl-util": "^0.15.1"
+    "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
     "@nuxt/types": "^2.15.7",
