--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "postinstall": "yarn start"
+    "postinstall": "yarn build"
   },
   "dependencies": {
     "@nfteyez/sol-rayz": "^0.8.0",
