--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "discord.js": "^13.3.1",
     "dotenv": "^10.0.0",
     "ibm-cos-sdk": "^1.11.0",
+    "node-cron": "^3.0.0",
     "nuxt": "^2.15.7",
     "tweetnacl": "^1.0.3",
     "xss": "^1.0.10"
