--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "core-js": "^3.15.1",
     "discord.js": "^13.3.1",
     "dotenv": "^10.0.0",
+    "human-date": "^1.4.0",
     "ibm-cos-sdk": "^1.11.0",
     "node-cron": "^3.0.0",
     "nuxt": "^2.15.7",
