--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^10.0.0",
     "human-date": "^1.4.0",
     "ibm-cos-sdk": "^1.11.0",
+    "node-cache": "^5.1.2",
     "node-cron": "^3.0.0",
     "nuxt": "^2.15.7",
     "tweetnacl": "^1.0.3",
