--- a/package.json
+++ b/package.json
@@ -18,14 +18,18 @@
     "@solana/web3.js": "^1.31.0",
     "@types/axios": "^0.14.0",
     "axios": "^0.24.0",
+    "cookie-parser": "^1.4.6",
     "core-js": "^3.15.1",
     "discord.js": "^13.3.1",
     "dotenv": "^10.0.0",
+    "express-session": "^1.17.2",
     "human-date": "^1.4.0",
     "ibm-cos-sdk": "^1.11.0",
     "node-cache": "^5.1.2",
     "node-cron": "^3.0.0",
     "nuxt": "^2.15.7",
+    "passport": "^0.5.2",
+    "passport-twitter": "^1.0.4",
     "tweetnacl": "^1.0.3",
     "xss": "^1.0.10"
   },
