--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "passport": "^0.5.2",
     "passport-twitter": "^1.0.4",
     "tweetnacl": "^1.0.3",
+    "vuetify": "^2.6.3",
     "xss": "^1.0.10"
   },
   "devDependencies": {
     "@nuxt/types": "^2.15.7",
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/tailwindcss": "^4.2.0",
+    "@nuxtjs/vuetify": "^1.12.3",
     "postcss": "^8.3.5"
   }
 }
