--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxtjs/vercel-builder": "^0.22.1",
     "@solana/web3.js": "^1.31.0",
     "@types/axios": "^0.14.0",
+    "@types/morgan": "^1.9.3",
     "axios": "^0.24.0",
     "cookie-parser": "^1.4.6",
     "core-js": "^3.15.1",
@@ -25,6 +26,8 @@
     "express-session": "^1.17.2",
     "human-date": "^1.4.0",
     "ibm-cos-sdk": "^1.11.0",
+    "morgan": "^1.10.0",
+    "morgan-json": "^1.1.0",
     "node-cache": "^5.1.2",
     "node-cron": "^3.0.0",
     "nuxt": "^2.15.7",
@@ -32,6 +35,7 @@
     "passport-twitter": "^1.0.4",
     "tweetnacl": "^1.0.3",
     "vuetify": "^2.6.3",
+    "winston": "^3.6.0",
     "xss": "^1.0.10"
   },
   "devDependencies": {
